# python-deb-factory

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  README.pt.md  pyproject.toml
.github/workflows/: ci.yml
debian/: changelog  control  rules
docs/: architecture.md  build-process.md  debian-packaging.md  github-actions.md  index.md  publishing.md  release-process.md
scripts/: README.md  build-deb.sh  release.sh  test.sh
src/hello_python_deb/: __main__.py
tests/: test_basic.py
